--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -44,11 +44,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddNewCity.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddNewCity.Designer.cs">
+      <DependentUpon>AddNewCity.cs</DependentUpon>
+    </Compile>
     <Compile Include="com.gui\AddAgent.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="com.gui\AddAgent.Designer.cs">
       <DependentUpon>AddAgent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="com.gui\AddNewPassenger.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="com.gui\AddNewPassenger.Designer.cs">
+      <DependentUpon>AddNewPassenger.cs</DependentUpon>
     </Compile>
     <Compile Include="com.gui\Home.cs">
       <SubType>Form</SubType>
@@ -62,16 +74,31 @@
     <Compile Include="com.gui\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="com.gui\UpdatePassenger.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="com.gui\UpdatePassenger.Designer.cs">
+      <DependentUpon>UpdatePassenger.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddNewCity.resx">
+      <DependentUpon>AddNewCity.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="com.gui\AddAgent.resx">
       <DependentUpon>AddAgent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="com.gui\AddNewPassenger.resx">
+      <DependentUpon>AddNewPassenger.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="com.gui\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="com.gui\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="com.gui\UpdatePassenger.resx">
+      <DependentUpon>UpdatePassenger.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
