--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -11,6 +11,21 @@
     <AssemblyName>Project</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,6 +47,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClassLibrary2, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\ClassLibrary2.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -56,11 +75,29 @@
     <Compile Include="com.gui\AddAgent.Designer.cs">
       <DependentUpon>AddAgent.cs</DependentUpon>
     </Compile>
+    <Compile Include="com.gui\AddCityBus.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="com.gui\AddCityBus.Designer.cs">
+      <DependentUpon>AddCityBus.cs</DependentUpon>
+    </Compile>
     <Compile Include="com.gui\AddNewPassenger.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="com.gui\AddNewPassenger.Designer.cs">
       <DependentUpon>AddNewPassenger.cs</DependentUpon>
+    </Compile>
+    <Compile Include="com.gui\AddNewRoute.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="com.gui\AddNewRoute.Designer.cs">
+      <DependentUpon>AddNewRoute.cs</DependentUpon>
+    </Compile>
+    <Compile Include="com.gui\ChangePassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="com.gui\ChangePassword.Designer.cs">
+      <DependentUpon>ChangePassword.cs</DependentUpon>
     </Compile>
     <Compile Include="com.gui\Home.cs">
       <SubType>Form</SubType>
@@ -73,6 +110,12 @@
     </Compile>
     <Compile Include="com.gui\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="com.gui\UpdateARoute.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="com.gui\UpdateARoute.Designer.cs">
+      <DependentUpon>UpdateARoute.cs</DependentUpon>
     </Compile>
     <Compile Include="com.gui\UpdatePassenger.cs">
       <SubType>Form</SubType>
@@ -88,14 +131,26 @@
     <EmbeddedResource Include="com.gui\AddAgent.resx">
       <DependentUpon>AddAgent.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="com.gui\AddCityBus.resx">
+      <DependentUpon>AddCityBus.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="com.gui\AddNewPassenger.resx">
       <DependentUpon>AddNewPassenger.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="com.gui\AddNewRoute.resx">
+      <DependentUpon>AddNewRoute.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="com.gui\ChangePassword.resx">
+      <DependentUpon>ChangePassword.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="com.gui\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="com.gui\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="com.gui\UpdateARoute.resx">
+      <DependentUpon>UpdateARoute.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="com.gui\UpdatePassenger.resx">
       <DependentUpon>UpdatePassenger.cs</DependentUpon>
@@ -119,6 +174,18 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
